--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
   <link id="the-story-css-file"href="css/the-story.min.css" rel="stylesheet" media="screen">
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="img/favicon.ico">
+  <link rel="shortcut icon" href="images/favicon.ico">
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
