updates to css and html

--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,10 @@
 <head>
-  <title>The Story - responsive landing page</title>
+  <title>Decriminalize Tulsa</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
-  <meta name="description" content="Twitter bootstrap theme">
+  <meta name="description" content="We stand with the Oklahoma Coalition to End Prohibition. No longer can we lock up people for posessing a seed bearing plant. Together we will overturn the laws through petition initatives. Join us.">
   <meta name="author" content="prettystrap">
-
-  <!-- Load The Story -->
-  <link id="the-story-css-file"href="css/the-story.min.css" rel="stylesheet" media="screen">
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="images/favicon.ico">
