--- a/client/main.html
+++ b/client/main.html
@@ -32,9 +32,9 @@
       </div>
       <div class="col-md-5 col-md-pull-8">
         <ul class="big-list">
-          <li><i class="fa fa-group"></i> The People Want It</li>
-          <li><i class="fa fa-flask"></i> Science Supports It</li>
-          <li><i class="fa fa-heart"></i> Morality Demands It</li>
+          <li><i class="fa fa-group fa-fw"></i> The People Want It</li>
+          <li><i class="fa fa-flask fa-fw"></i> Science Supports It</li>
+          <li><i class="fa fa-heart fa-fw"></i> Morality Demands It</li>
         </ul>
         <p>We are a grassroots coalition funded and run by volunteers with the goal to fully legalize cannabis for medical and recreational usage.</p>
         <br />
@@ -68,7 +68,7 @@
         <li>
           <h3><i class="fa fa-user-md"></i> Healthy Drug</h3>
           <p>
-            Cannabis has a plethora of medical benefits both as a treatment and as a preventative agent. Studies show it's not bad for yoU!</p>
+            Cannabis has a plethora of medical benefits both as a treatment and as a preventative agent. Studies show it's not bad for you!</p>
         </li>
         <li>
           <h3><i class="fa fa-money"></i> Revenue</h3>
@@ -148,7 +148,7 @@
         </div>
       </div>
       <div class="col-md-6 col-md-pull-6">
-         <h3>For our judeo-christian neighbors</h3>
+         <h3>For our Judeo-Christian neighbors</h3>
         <p class="lead">Let's have a moral conversation</p>
         <p>
            Genesis 1:28: And God said, "Behold. I have given you every plant yeilding seed that is on the face of all the earth, and every tree with seed in its fruit. You shall have them for food." -ESV
@@ -172,7 +172,7 @@
     <div class="inner-page row">
       <div class="col-md-6">
         <h4>
-          <strong><i class="fa fa-envelope"> </i>  Ready to help?</strong> Sign up for email updates about local Tulsa events. Your email will be our secret. <a href="#what-you-can-do">Then checkout what you can do now</a></h4>
+          <strong><i class="fa fa-envelope"> </i>  Ready to help?</strong> Sign up for email updates about local Tulsa events. Your email will be our secret. <a href="#what-you-can-do">Then checkout what you can do now!</a></h4>
       </div>
       <div class="col-md-4">
         <input type="email" placeholder="your@e-mail.com" name="EMAIL" class="subscribe">
@@ -344,7 +344,21 @@ Finally, the petition is submitted to the Mayor and filed with the County Electi
       <hr>
 
       <div class="row inner-page">
-					<div class="col-md-6 inner-page">
+          <div class="col-md-6 inner-page visible-sm visible-xs">
+            <div class="row">
+              <i class="fa fa-facebook-square fa-3x fa-fw"></i>
+              <i class="fa fa-twitter-square fa-3x fa-fw"></i>
+              <i class="fa fa-instagram fa-3x fa-fw"></i>
+              <i class="fa fa-google-plus-square fa-3x fa-fw"></i>
+            </div>
+            <div class="row">
+              <i class="fa fa-pinterest-square fa-3x fa-fw"></i>
+              <i class="fa fa-tumblr-square fa-3x fa-fw"></i>
+              <i class="fa fa-linkedin-square fa-3x fa-fw"></i>
+              <i class="fa fa-youtube-square fa-3x fa-fw"></i>
+            </div>
+          </div>
+					<div class="col-md-6 inner-page visible-md visible-lg">
 						<div class="row">
 							<div class="col-md-3 social-grid"><i class="fa fa-facebook-square fa-5x fa-fw"></i></div>
 							<div class="col-md-3 social-grid"><i class="fa fa-twitter-square fa-5x fa-fw"></i></div>
