updates to metadata

--- a/client/index.html
+++ b/client/index.html
@@ -1,20 +1,46 @@
 <head>
-  <title>Decriminalize Tulsa</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta charset="utf-8">
-  <meta name="description" content="We stand with the Oklahoma Coalition to End Prohibition. No longer can we lock up people for posessing a seed bearing plant. Together we will overturn the laws through petition initatives. Join us.">
-  <meta name="author" content="prettystrap">
+    <!-- Update your html tag to include the itemscope and itemtype attributes. -->
+  <html itemscope itemtype="http://schema.org/Article">
 
-  <!-- Favicon -->
-  <link rel="shortcut icon" href="images/favicon.ico">
+  <!-- Place this data between the <head> tags of your website -->
+    <title>Decriminalize Tulsa</title>
+  <meta name="description" content="We stand with the Oklahoma Coalition to End Prohibition. No longer can we lock up people for posessing a seed bearing plant. Together we will overturn the laws through petition initatives. Join us." />
+<!-- Schema.org markup for Google+ -->
+<meta itemprop="name" content="Decriminalize Tulsa">
+<meta itemprop="description" content="We stand with the Oklahoma Coalition to End Prohibition. No longer can we lock up people for posessing a seed bearing plant. Together we will overturn the laws through petition initatives. Join us.">
+<meta itemprop="image" content="http://162.243.74.134/images/okcep.png">
 
-  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!--[if lt IE 9]>
-      <script src="/js/html5shiv.js"></script>
-      <script src="/js/respond.min.js"></script>
-      <![endif]-->
-  <meta http-equiv=X-UA-Compatible content=IE=edge>    
+<!-- Twitter Card data -->
+<meta name="twitter:card" content="summary">
+<!-- <meta name="twitter:site" content="@publisher_handle">-->
+<meta name="twitter:title" content="Decriminalize Tulsa">
+<meta name="twitter:description" content="We stand with the Oklahoma Coalition to End Prohibition. Join us.">
+<!-- <meta name="twitter:creator" content="@author_handle">-->
+<!-- Twitter summary card with large image must be at least 280x150px -->
+<meta name="twitter:image:src" content="http://162.243.74.134/images/okcep.png">
+
+<!-- Open Graph data -->
+<meta property="og:title" content="Decriminalize Tulsa" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="http://decriminalizetulsa.org/" />
+<meta property="og:image" content="http://162.243.74.134/images/okcep.png" />
+<meta property="og:description" content="We stand with the Oklahoma Coalition to End Prohibition. No longer can we lock up people for posessing a seed bearing plant. Together we will overturn the laws through petition initatives. Join us." />
+<meta property="og:site_name" content="Decriminalize Tulsa" />
+
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8">
+
+<!-- Favicon -->
+<link rel="shortcut icon" href="images/favicon.ico">
+
+<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!--[if lt IE 9]>
+    <script src="/js/html5shiv.js"></script>
+    <script src="/js/respond.min.js"></script>
+    <![endif]-->
+<meta http-equiv=X-UA-Compatible content=IE=edge>    
+
 </head>
 
 <!-- activate scrollspy -->
