bug fix on link

--- a/client/main.html
+++ b/client/main.html
@@ -90,7 +90,7 @@
           movement will allow us to build a foundation for a state-wide initiative.
         </p>
         <p> The petition inititative process is the only way we can
-          hope to effect real change within the next 10 years.  <a href="#learn-more">Learn more</a> about the petition initiative.</p>
+          hope to effect real change within the next 10 years.  <a class="scroll" href="#assets">Learn more</a> about the petition initiative.</p>
       </div>
     </div>
 
