--- a/client/main.html
+++ b/client/main.html
@@ -11,10 +11,10 @@
       <div id="nav-collapse" class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li class="active"><a title="Home" class="scroll nav-home" href="#home">Home</a></li>
-          <li><a title="Why" href="#features" class=" scroll nav-why">Why Decriminalize?</a></li>
+          <li><a title="Why" href="#info" class="scroll nav-why">Why Decriminalize?</a></li>
           <li><a title="Join Us" href="#join" class="scroll nav-join">Join</a></li>
-          <li><a title="How" href="#assets" class="scroll fadeto nav-how">How Are We Going To Do it?</a></li>
-          <li><a title="What" href="#contact" class="scroll fadeto nav-what">What Can I Do Now?</a></li>
+          <li><a title="How" href="#how" class="scroll fadeto nav-how">How Are We Going To Do it?</a></li>
+          <li><a title="What" href="#connect" class="scroll fadeto nav-what">What Can I Do Now?</a></li>
 
         </ul>
       </div>
@@ -48,13 +48,13 @@
     <div class="row inner-page">
       <div class="col-md-12">
         <h4 class="pull-left">Still think that cannabis decriminalization is a bad idea?</h4>
-        <a href="#features" class="scroll btn btn-primary pull-right" title="Learn More"><i class="fa fa-caret-down"></i> Learn More</a>
+        <a href="#info" class="scroll btn btn-primary pull-right" title="Learn More"><i class="fa fa-caret-down"></i> Learn More</a>
       </div>
     </div>
   </div> <!-- /.sign-up -->
 
   <!-- Feature page-->
-  <div id="features" class="page color-4">
+  <div id="info" class="page color-4">
     <div class="inner-page">
       <h2 class="page-headline">Why Should We Decriminalize Cannabis?</h2>
     </div>
@@ -90,7 +90,7 @@
           movement will allow us to build a foundation for a state-wide initiative.
         </p>
         <p> The petition inititative process is the only way we can
-          hope to effect real change within the next 10 years.  <a class="scroll" href="#assets">Learn more</a> about the petition initiative.</p>
+          hope to effect real change within the next 10 years.  <a class="scroll" href="#how">Learn more</a> about the petition initiative.</p>
       </div>
     </div>
 
@@ -191,7 +191,7 @@
       </div>
     </div>
   </div>
-   <div id="assets" class="page color-3">
+   <div id="how" class="page color-3">
     <div class="inner-page">
       <h2 class="page-headline">So how are we gonna do this exactly?</h2>
       <div class="alert color-1"><i class="fa fa-info-circle"></i> Article 18, Sections 4(a)-4(e) of the Oklahoma Constitution reserves the right of citizens to petition municipal government for change. The Oklahoma Constitution offers a brief outline of the Initiative Petition / Referendum process. Title 11, Article 15 and Title 34 of the state statutes go into greater detail of the required process and specifics of how the signatures should be collected.</div>
@@ -309,7 +309,7 @@ Finally, the petition is submitted to the Mayor and filed with the County Electi
         	</ul> 
       	</div> -->
     </div>
-    <div id="contact" class="page color-">
+    <div id="connect" class="page color-">
 
       	<div class="row inner-page">
 
