fixes to submit ui response

--- a/client/main.html
+++ b/client/main.html
@@ -171,14 +171,15 @@
   <div class="newsletter color-1">
     <div class="inner-page row">
       <div class="col-md-6">
-        <h4>
-          <strong><i class="fa fa-envelope"> </i>  Ready to help?</strong> Sign up for email updates about local Tulsa events. Your email will be our secret. <a href="#what-you-can-do">Then checkout what you can do now!</a></h4>
+        <h4 id="thanks">
+        <strong><i class="fa fa-envelope"> </i>  Ready to help?</strong> Sign up for email updates about local Tulsa events. Your email will be our secret. <a href="#what-you-can-do">Then check out what you can do now!</a></h4>
       </div>
       <div class="col-md-4">
         <input type="email" placeholder="your@e-mail.com" name="EMAIL" class="subscribe">
       </div>
       <div class="col-md-2">
-        <button type="submit" id="submit" class="btn btn-primary pull-right btn-block">Sign Up</button>
+
+          <button type="submit" id="submit" class="btn btn-primary pull-right btn-block">Sign Up</button>
       </div>
     </div>
     <div class="inner-page row">
