add personalization to thanks

--- a/client/thanks.html
+++ b/client/thanks.html
@@ -1,5 +1,5 @@
 <template name="thanks">
 
-	<div class='alert alert-info'><i class='fa fa-smile-o'></i><strong> Thanks for signing up! </strong>We'll send you en email when we have news for you. <a href="#what-you-can-do">Check out what you can do now to help the movement.</a></div>
+	<div class='alert alert-info'><i class='fa fa-smile-o'></i><strong> Thanks for signing up {{user}}! </strong>We'll send you en email when we have news for you. <a href="#what-you-can-do">Check out what you can do now to help the movement.</a></div>
 
 </template>
