comment out phone number

--- a/client/main.html
+++ b/client/main.html
@@ -182,7 +182,7 @@
           <button type="submit" id="submit" class="btn btn-primary pull-right btn-block">Sign Up</button>
       </div>
     </div>
-    <div class="inner-page row">
+   <!--  <div class="inner-page row">
       <div class="col-md-6">
         <h4>
           <strong><i class="fa fa-phone-square"> </i> Text </strong> to stay informed on the statewide OKCEP upcoming rallies and events.</h4>
@@ -191,7 +191,7 @@
           <h1>1-202-499-2595</h1>
       </div>
     </div>
-  </div>
+  </div> -->
    <div id="how" class="page color-3">
     <div class="inner-page">
       <h2 class="page-headline">So how are we gonna do this exactly?</h2>
