--- a/client/main.html
+++ b/client/main.html
@@ -182,6 +182,7 @@
           <button type="submit" id="submit" class="btn btn-primary pull-right btn-block">Sign Up</button>
       </div>
     </div>
+  </div>
    <!--  <div class="inner-page row">
       <div class="col-md-6">
         <h4>
@@ -192,12 +193,12 @@
       </div>
     </div>
   </div> -->
-   <div id="how" class="page color-3">
+   <div id="how" class="page">
     <div class="inner-page">
       <h2 class="page-headline">So how are we gonna do this exactly?</h2>
       <div class="alert color-1"><i class="fa fa-info-circle"></i> Article 18, Sections 4(a)-4(e) of the Oklahoma Constitution reserves the right of citizens to petition municipal government for change. The Oklahoma Constitution offers a brief outline of the Initiative Petition / Referendum process. Title 11, Article 15 and Title 34 of the state statutes go into greater detail of the required process and specifics of how the signatures should be collected.</div>
     </div>
-
+  </div>
 <!-- 
 
 
@@ -310,7 +311,7 @@ Finally, the petition is submitted to the Mayor and filed with the County Electi
         	</ul> 
       	</div> -->
     </div>
-    <div id="connect" class="page color-">
+    <div id="connect" class="page">
 
       	<div class="row inner-page">
 
