--- a/client/main.html
+++ b/client/main.html
@@ -144,17 +144,17 @@
     <div class="row inner-page">
       <div class="col-md-6 col-md-push-6">
         <div class="btn-container figurette">
-        <img class="figurette lazy" src="img/pixel.png" data-original="/images/church.jpg" alt="Genesis 1:29" />
+        <img class="figurette lazy" src="img/pixel.png" data-original="/images/church.jpg" alt="Genesis 1:29-31" />
         </div>
       </div>
       <div class="col-md-6 col-md-pull-6">
          <h3>For our Judeo-Christian neighbors</h3>
         <p class="lead">Let's have a moral conversation</p>
         <p>
-           Genesis 1:28: And God said, "Behold. I have given you every plant yeilding seed that is on the face of all the earth, and every tree with seed in its fruit. You shall have them for food." -ESV
+           Genesis 1:29-31: And God said, "Behold. I have given you every plant yielding seed that is on the face of all the earth, and every tree with seed in its fruit. You shall have them for food. And to every beast of the earth and to every bird of the heavens and to everything that creeps on the earth, everything that has the breath of life, I have given every green plant for food. And it was so. And God saw everything that he had made, and behold, it was very good. And there was evening and there was morning, the sixth day." -ESV
         </p> 
-        <p>Matthew 25:40: And the King will answer them, "Truly. I say to you, as you did it to one of the least of these my brothers, you did it to me." -ESV</p>
-
+<!--         <p>Matthew 25:40: And the King will answer them, "Truly. I say to you, as you did it to one of the least of these my brothers, you did it to me." -ESV</p>
+ -->
         <p>If you are a religious person, then I would like you to consider seriously the thought that this kind of effort, born of compassion for our neighbors, is the exact kind of ministry that the Gospel commisions us to do. Decriminalizing marijuana as an act of compassion is following in the footsteps of Christ in the 21st century. <a href="http://newsok.com/oklahoma-evangelical-christians-among-supporters-of-medical-marijuana/article/3886381"> You are not alone.</a> </p>
 
       <!--   <ul class="big-list">
