--- a/client/main.html
+++ b/client/main.html
@@ -38,7 +38,7 @@
         </ul>
         <p>We are a grassroots coalition funded and run by volunteers with the goal to fully legalize cannabis for medical and recreational usage.</p>
         <br />
-         <a href="#contribute" title="Check out more freatures!" class="scroll btn btn-primary btn-centered"><i class="fa fa-caret-down"></i> Contribute Now</a>
+         <a href="#join" title="Check out more freatures!" class="scroll btn btn-primary btn-centered"><i class="fa fa-caret-down"></i> Contribute Now</a>
      </div>
     </div>
   </div> <!-- /#home -->
@@ -137,7 +137,6 @@
         <p> Those are just a few, and who knows how many medical advances are not yet discovered due to prohibition. Science has shown <a href="http://www.the-scientist.com/?articles.view/articleNo/37625/title/Pot-Not-Linked-to-Poor-Health/">marijuana is not bad for you</a> and it can even be beneficial to many!</p>
       </div>
     </div>
-    <div  id="contribute"></div>
     <hr>
 
     <!-- Video -->
@@ -151,11 +150,10 @@
          <h3>For our Judeo-Christian neighbors</h3>
         <p class="lead">Let's have a moral conversation</p>
         <p>
-           Genesis 1:29-31: And God said, "Behold. I have given you every plant yielding seed that is on the face of all the earth, and every tree with seed in its fruit. You shall have them for food. And to every beast of the earth and to every bird of the heavens and to everything that creeps on the earth, everything that has the breath of life, I have given every green plant for food. And it was so. And God saw everything that he had made, and behold, it was very good. And there was evening and there was morning, the sixth day." -ESV
+           Genesis 1:29-30: And God said, "Behold. I have given you every plant yielding seed that is on the face of all the earth, and every tree with seed in its fruit. You shall have them for food. And to every beast of the earth and to every bird of the heavens and to everything that creeps on the earth, everything that has the breath of life, I have given every green plant for food. And it was so." -ESV
         </p> 
-<!--         <p>Matthew 25:40: And the King will answer them, "Truly. I say to you, as you did it to one of the least of these my brothers, you did it to me." -ESV</p>
- -->
-        <p>If you are a religious person, then I would like you to consider seriously the thought that this kind of effort, born of compassion for our neighbors, is the exact kind of ministry that the Gospel commisions us to do. Decriminalizing marijuana as an act of compassion is following in the footsteps of Christ in the 21st century. <a href="http://newsok.com/oklahoma-evangelical-christians-among-supporters-of-medical-marijuana/article/3886381"> You are not alone.</a> </p>
+        <p>Matthew 25:40: And the King will answer them, "Truly. I say to you, as you did it to one of the least of these my brothers, you did it to me." -ESV</p>
+        <p>This kind of effort, born of compassion for our neighbors, is the exact kind of ministry that the Gospel commisions us to do. Decriminalizing marijuana as an act of compassion is following in the footsteps of Christ in the 21st century. <a href="http://newsok.com/oklahoma-evangelical-christians-among-supporters-of-medical-marijuana/article/3886381"> You are not alone.</a> </p>
 
       <!--   <ul class="big-list">
           <li><i class="fa fa-check"></i> Always latest bootstrap</li>
@@ -165,8 +163,10 @@
         </ul>
         <br />
         <a href="#assets" class="scroll btn btn-primary btn-centered"><i class="fa fa-caret-down"></i> Even more features</a> -->
+        <div id="join" > </div>
       </div>
-    </div><div id="join" > </div>
+    </div>
+    <hr>
   </div> <!-- /#features -->
   <div class="newsletter color-1">
     <div class="inner-page row">
